package team5.interfaces;

public interface CsvRepository extends InternshipCsvRepository, ApplicationCsvRepository { }
