@startuml
skinparam classAttributeIconSize 0
skinparam dpi 200
skinparam shadowing false

skinparam class {
    BackgroundColor #E3F2FD
    BorderColor #0D47A1
    FontColor #0D47A1
    BorderThickness 2
}
skinparam note {
    BackgroundColor #FFFDE7
    BorderColor #FBC02D
    FontColor #5D4037
    BorderThickness 1
}

title <size:20><b>DIP — Implementation</b></size>
left to right direction

' ===========================
' SECTION 1 - ABSTRACTIONS
' ===========================
interface ApplicationCsvRepository <<interface>> {
    + {abstract} writeInternshipApplications(apps) : boolean
}

interface InternshipCsvRepository <<interface>> {
    ' ... other methods
}

' CsvRepository is the child interface that combines the other two
interface CsvRepository <<interface>> {
    ' ... methods from both parents
}

' ===========================
' SECTION 2 - LOW-LEVEL (CONCRETE)
' ===========================
class CsvFileBoundary {
    + writeInternshipApplications(apps) : boolean
    ' ... other implemented methods
}


' ===========================
' SECTION 3 - HIGH-LEVEL
' ===========================
class ReviewApplicationsAction {
    - applicationRepository : ApplicationCsvRepository
    --
    + ReviewApplicationsAction()
    + ReviewApplicationsAction(repository)
    + run(companyRep) : void
}

' ===========================
' NOTES (re-positioned for layout)
' ===========================
note left of ReviewApplicationsAction
    <b>ACTUAL CODE</b>
    File: ReviewApplicationsAction.java

    <b>Line 31:</b> Depends on interface
    private final ApplicationCsvRepository
        applicationRepository;

    <b>Lines 37-39:</b> Constructor injection
    public ReviewApplicationsAction(
        ApplicationCsvRepository repository) {
        this.applicationRepository = repository;
    }

    <b>Line 381:</b> Uses interface
    boolean success = applicationRepository
        .writeInternshipApplications(
            App.internshipApplicationList);

    <b>DIP in Action ✓</b>
    • Depends on abstraction
    • Can inject different implementations:
      - CsvFileBoundary (production)
      - MockRepository (testing)
      - DatabaseRepository (future)
    • Testable and flexible
end note

note right of ApplicationCsvRepository
    <b>ACTUAL INTERFACE</b>
    File: ApplicationCsvRepository.java
    Lines: 7-9

    public interface ApplicationCsvRepository {
        boolean writeInternshipApplications(
            ArrayList<InternshipApplication> apps);
    }
end note

note bottom of CsvRepository
    <b>ACTUAL HIERARCHY</b>

    CsvRepository extends both:
    • InternshipCsvRepository
    • ApplicationCsvRepository

    File: CsvRepository.java
end note


' ===========================
' RELATIONSHIPS
' ===========================

' High-level module depends on an abstraction
ReviewApplicationsAction o-- ApplicationCsvRepository

' Abstractions can be hierarchical
ApplicationCsvRepository <|-- CsvRepository
InternshipCsvRepository <|-- CsvRepository

' Low-level module implements an abstraction
CsvRepository <|.. CsvFileBoundary
@enduml